--- a/all.css
+++ b/all.css
@@ -111,12 +111,159 @@ table {
 	width: 1000px;
 	height: 412px;
 }
+
 .promo{
 	height: 150px;
-	background-color: #232221;
-	opacity:0.8;
+	padding-top: 130px;
+	padding-left: 30px;
 }
-.promo h2{
+.promo p{
 	font-size: 36px;
+	padding-top: 10px;
+	background-color: #c0c0c0;
+	opacity:0.5s;
+	padding-bottom: 10px;
+}
+.intro{
+	margin-top: 30px;
+	margin-left: 20px;
+	width: 300px;
+	height: 300px;
+	border: 1px solid #000; 
+	float: left;
+}
+.intro2{
+	margin-top: 30px;
+	margin-left: 20px;
+	width: 300px;
+	height: 300px;
+	border: 1px solid #000; 
+	float: left;
+}
+.intro3{
+	margin-top: 30px;
+	margin-left: 20px;
+	width: 300px;
+	height: 300px;
+	border: 1px solid #000; 
+	float: left;
+}
+.intro3 ul{
+	padding-left: 40px;
+	line-height: 30px;
+}
+.intro3 li{
+	list-style: inside;
+	letter-spacing: 4px;
+	line-height: 25px;
+}
+.content h4{
+	font-size: 20px;
+	text-align: center;
+	padding: 10px;
+	font-weight: bold;
+}
+.content p{
+	padding: 8px;
+	letter-spacing: 4px;
+	line-height: 20px;
+}
+.content img{
+	height: 100px;
+	width: 100px;
+	display: block;
+	margin: auto;
+	padding-top: 20px;
+}
+.clearfix{
+	clear: both;
+}
+.content h3{
+	text-align: center;
+	font-size: 25px;
+	margin: 30px;
+}
+.table-wrapper {
+	width: 800px;
+	margin: 20px auto;
+	border-top: 1px solid #000;
+	border-bottom: 1px solid #000;
+}
+.table-wrapper th{
+	padding: 15px;	
+	text-align: left;
+	background-color: #f6f6f6;
+}
+.table-wrapper td{
+	border-top: 1px solid #000;
+	border-bottom: 1px solid #000;
+	text-align: left;
+	padding: 15px 40px 15px 15px;
+}
+.color{
+	color: #42b392;
+}
+.info{
+	margin-top: 40px;
+	height: 405px;
+	background-image: url(img/bg2.png);
+	background-repeat: repeat-x;
+}
+.info h3{
+	color: #fff;
+	text-align: center;
+	font-size: 26px;
+	padding-bottom: 10px;
+}
+.infotext{
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+.input-wrapper2{
+	float: left;
+	height: 250px;
+	width: 400px;
+	margin-left: 50px;
+	border-radius: 5px;
+}
+.text-info{
+	float: left;
+	margin-left: 90px;
+}
+.text-info p{
 	color: white;
+	margin-bottom: 10px;
+}
+.input-wrapper{
+	width: 350px;
+	border-radius: 5px;
+	color: grey;
+	margin-bottom: 10px;
+	height: 20px;
+}
+.submit{
+	float: right;
+	color: white;
+	background-color: #44dab4;
+	border-style:none;
+	font-size: 16px;
+	border-radius: 5px;
+	padding: 5px;
+	margin-top: 10px;
+	width: 100px;
+	text-align: center;
+}
+.footer{
+	margin-top: 10px;
+	margin-bottom: 30px;
+}
+.contact{
+	float: right;
+}
+.contact p{
+	padding: 5px;
+	font-size: 13px;
+}
+.contact span{
+	color: #ff1493;
 }
